Combat arc epeiste + debut arc OR

--- a/templates/Demons/Age_or.html
+++ b/templates/Demons/Age_or.html
@@ -13,8 +13,8 @@
       }
 
       document.addEventListener("DOMContentLoaded", function () {
-        loadFile("../head/head.html", "head-content");
-        loadFile("../header.html", "header-content");
+        loadFile("/templates/head/head-content.html", "head-content");
+        loadFile("/templates/header.html", "header-content");
       });
     </script>
   </head>
@@ -32,7 +32,7 @@
             <figure>
               <img
                 id="proto"
-                src="../img/Demons/Age_or/1.png"
+                src="../img/Demons/Age_or/Age_or.png"
                 class="center hover"
                 data-toggle="modal"
                 data-target="#berserker-img"
@@ -60,7 +60,7 @@
                     </div>
                     <div class="modal-body">
                       <img
-                        src="../img/Demons/Age_or/Demons.png"
+                        src="../img/Demons/Age_or/Age_or.png"
                         class="modal-image img-fluid"
                       />
                     </div>
@@ -75,16 +75,16 @@
 
         <div id="manga-list">
           <ul>
-            <!-- Zodd l'Immortel  -->
+            <!-- Bazuso -->
             <li class="mangatitle">
-              <h2 style="text-align: center">Zodd l'Immortel</h2>
+              <h2 style="text-align: center">Bazuso</h2>
             </li>
 
             <div>
               <figure>
                 <img
                   id="proto"
-                  src="../img/Demons/Age_or/Zodd.png"
+                  src="/img/Demons/Age_or/Bazuso.png"
                   class="center hover"
                   data-toggle="modal"
                   data-target="#berserker-img"
@@ -112,7 +112,7 @@
                       </div>
                       <div class="modal-body">
                         <img
-                          src="../img/Demons/Age_or/Zodd.png"
+                          src="/img/Demons/Age_or/Bazuso.png"
                           class="modal-image img-fluid"
                         />
                       </div>
@@ -123,15 +123,310 @@
               </figure>
             </div>
             <p class="description">
-              <strong> Description :</strong>Zodd est un apôtre puissant et l'un
-              des premiers que Guts rencontre. Il est immensément fort et
-              immortel, prenant la forme d'un gigantesque démon cornu.
+              <strong> Description :</strong>
+              Bazuso, également connu sous le nom de "L'Ours des Caverne," est
+              un imposant guerrier mercenaire. Reconnu pour sa grande taille et
+              sa carrure massive, il porte une lourde armure ornée de motifs
+              intimidants et manie une énorme hache de guerre avec une grande
+              expertise. Bazuso est célèbre pour sa brutalité au combat et sa
+              réputation redoutable sur les champs de bataille.
             </p>
             <br />
+
             <p class="description">
-              <strong> Affinités et Pouvoirs :</strong>Zodd possède une force
-              surhumaine, une grande endurance et la capacité de se transformer
-              en une créature démoniaque avec des ailes et des cornes.
+              <strong> Affinités et Pouvoirs :</strong>
+              Bazuso est principalement motivé par l'argent et la gloire, se
+              battant en tant que mercenaire sans véritable loyauté à une cause
+              ou à un seigneur. Sa renommée repose sur sa capacité à terrifier
+              et à vaincre ses adversaires grâce à sa force brute et sa maîtrise
+              des armes lourdes. En termes de pouvoirs, Bazuso ne possède pas de
+              capacités surnaturelles, mais il compense par une force physique
+              exceptionnelle et une grande résistance. Sa hache de guerre est
+              capable de trancher à travers les armures et les boucliers avec
+              une facilité déconcertante, et il utilise son poids et sa
+              puissance pour écraser ses ennemis. Son expérience et son habileté
+              en font un adversaire redoutable, capable de tenir tête à
+              plusieurs combattants à la fois.
+            </p>
+            <br />
+
+            <p class="description">
+              Bazuso rencontre son match en la personne de Guts, un jeune
+              mercenaire en quête de gloire. Leur combat met en évidence la
+              férocité et la détermination de Guts, qui parvient finalement à
+              vaincre Bazuso, prouvant ainsi sa valeur et sa compétence en tant
+              que guerrier. La défaite de Bazuso marque un tournant pour Guts,
+              le propulsant sur le chemin de sa future renommée.
+            </p>
+            <br />
+
+            <!-- 1er combat contre Griffith -->
+            <li class="mangatitle">
+              <h2 style="text-align: center">1er combat contre Griffith</h2>
+            </li>
+
+            <div>
+              <figure>
+                <img
+                  id="proto"
+                  src="/img/Demons/Age_or/GvG1.png"
+                  class="center hover"
+                  data-toggle="modal"
+                  data-target="#berserker-img"
+                />
+                <!-- Modal -->
+                <div
+                  class="modal fade"
+                  id="berserker-img"
+                  tabindex="-1"
+                  role="dialog"
+                  aria-labelledby="berserker-img"
+                  aria-hidden="true"
+                >
+                  <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button
+                          type="button"
+                          class="close"
+                          data-dismiss="modal"
+                          aria-label="Close"
+                        >
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+                      </div>
+                      <div class="modal-body">
+                        <img
+                          src="/img/Demons/Age_or/GvG1.png"
+                          class="modal-image img-fluid"
+                        />
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Modal -->
+              </figure>
+            </div>
+            <p class="description">
+              <strong> Description :</strong>
+              Le premier duel entre Guts et Griffith est un moment clé qui se
+              déroule peu après la rencontre initiale entre les deux
+              personnages. Guts, un mercenaire solitaire, croise le chemin de la
+              Troupe du Faucon dirigée par le charismatique Griffith.
+              Impressionné par les compétences de Guts au combat, Griffith
+              décide de le recruter, mais Guts, fier et indépendant, refuse.
+            </p>
+            <br />
+
+            <p class="description">
+              <strong> Description du Duel:</strong>
+              Le duel commence lorsque Guts, défié par Griffith, accepte de se
+              battre pour décider de son avenir. Griffith propose que si Guts
+              perd, il rejoindra la Troupe du Faucon. Confiant en ses capacités,
+              Guts accepte. Au début du duel, Guts utilise sa force brute pour
+              tenter d'écraser Griffith, mais Griffith esquive habilement ses
+              attaques. Le contraste entre la puissance sauvage de Guts et la
+              finesse élégante de Griffith est frappant. Malgré ses efforts,
+              Guts est surpris par la vitesse et la technique de Griffith. Le
+              tournant du duel survient lorsque Griffith parvient à désarmer
+              Guts avec une habileté remarquable, le plaquant au sol et pointant
+              sa rapière à sa gorge. Cette victoire démontre non seulement la
+              supériorité technique de Griffith, mais aussi son contrôle et son
+              sang-froid sous la pression.
+            </p>
+            <br />
+
+            <p class="description">
+              <strong>Conséquences du Duel : </strong>
+              Guts, battu et impressionné, accepte de rejoindre la Troupe du
+              Faucon. Ce duel marque le début d'une relation complexe entre Guts
+              et Griffith, basée sur un mélange de respect mutuel, de rivalité
+              et de camaraderie. Cette victoire solidifie également la position
+              de Griffith en tant que leader capable de rallier des combattants
+              puissants à sa cause, tout en posant les bases de l'évolution
+              future de Guts au sein de la troupe.
+            </p>
+            <br />
+
+            <!-- 1er combat contre Zodd -->
+            <li class="mangatitle">
+              <h2 style="text-align: center">1er combat contre Zodd</h2>
+            </li>
+
+            <div>
+              <figure>
+                <img
+                  id="proto"
+                  src="/img/Demons/Age_or/Zodd.png"
+                  class="center hover"
+                  data-toggle="modal"
+                  data-target="#berserker-img"
+                />
+                <!-- Modal -->
+                <div
+                  class="modal fade"
+                  id="berserker-img"
+                  tabindex="-1"
+                  role="dialog"
+                  aria-labelledby="berserker-img"
+                  aria-hidden="true"
+                >
+                  <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button
+                          type="button"
+                          class="close"
+                          data-dismiss="modal"
+                          aria-label="Close"
+                        >
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+                      </div>
+                      <div class="modal-body">
+                        <img
+                          src="/img/Demons/Age_or/Zodd.png"
+                          class="modal-image img-fluid"
+                        />
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Modal -->
+              </figure>
+            </div>
+            <p class="description">
+              <strong> Description :</strong>
+              Le premier combat contre Zodd l'Immortel est un moment crucial, se
+              déroulant après que Guts ait rejoint la Troupe du Faucon.
+              Nosferatu Zodd est un légendaire guerrier et apôtre connu pour sa
+              puissance écrasante et son immortalité. Le combat met en lumière
+              les capacités de Guts et Griffith ainsi que les dangers
+              surnaturels qu'ils doivent affronter.
+            </p>
+            <br />
+
+            <p class="description">
+              <strong> Description du Duel:</strong>
+              Le combat commence lorsque Guts rencontre Zodd dans une forteresse
+              en ruines, après avoir découvert des cadavres mutilés. Zodd, sous
+              sa forme humaine, engage le combat avec Guts. Malgré sa force et
+              sa détermination, Guts est rapidement submergé par la puissance
+              écrasante de Zodd. Le combat est brutal, avec Guts utilisant
+              toutes ses compétences pour tenter de blesser Zodd, mais en vain.
+              Griffith intervient pour sauver Guts, et ensemble, ils tentent de
+              combattre Zodd. Cependant, la situation devient désespérée lorsque
+              Zodd révèle sa véritable forme démoniaque, augmentant encore sa
+              force et sa férocité. Même avec leurs efforts combinés, Guts et
+              Griffith sont incapables de vaincre Zodd. Le tournant du combat
+              survient lorsque Zodd remarque le Beherit que Griffith porte
+              autour de son cou. Reconnaissant l'artefact et sa signification,
+              Zodd décide de cesser le combat. Avant de partir, il laisse un
+              avertissement sinistre : Griffith est destiné à un sort terrible,
+              et ceux qui le suivent connaîtront la mort.
+            </p>
+            <br />
+
+            <p class="description">
+              <strong>Conséquences du Duel : </strong>
+              Le combat contre Zodd laisse une impression durable sur Guts et
+              Griffith. Guts réalise l'existence de forces surnaturelles
+              puissantes et dangereuses, tandis que Griffith reste mystérieux
+              quant à la véritable nature de son ambition et de son destin. Cet
+              affrontement renforce également le lien entre Guts et Griffith,
+              tout en semant les graines de futurs conflits et révélations.
+            </p>
+            <br />
+
+            <!-- 2eme combat contre Griffith -->
+            <li class="mangatitle">
+              <h2 style="text-align: center">Second combat contre Griffith</h2>
+            </li>
+
+            <div>
+              <figure>
+                <img
+                  id="proto"
+                  src="/img/Demons/Age_or/GvG2.png"
+                  class="center hover"
+                  data-toggle="modal"
+                  data-target="#berserker-img"
+                />
+                <!-- Modal -->
+                <div
+                  class="modal fade"
+                  id="berserker-img"
+                  tabindex="-1"
+                  role="dialog"
+                  aria-labelledby="berserker-img"
+                  aria-hidden="true"
+                >
+                  <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button
+                          type="button"
+                          class="close"
+                          data-dismiss="modal"
+                          aria-label="Close"
+                        >
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+                      </div>
+                      <div class="modal-body">
+                        <img
+                          src="/img/Demons/Age_or/GvG2.png"
+                          class="modal-image img-fluid"
+                        />
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Modal -->
+              </figure>
+            </div>
+            <p class="description">
+              <strong> Description :</strong>
+              Le combat se déroule après que Guts ait décidé de quitter la
+              Troupe du Faucon. Cette décision est motivée par son désir de
+              trouver son propre chemin et de ne plus être simplement un outil
+              pour réaliser les ambitions de Griffith.
+            </p>
+            <br />
+
+            <p class="description">
+              <strong> Description du Duel:</strong>
+              Le duel commence lorsque Guts annonce son intention de quitter la
+              Troupe du Faucon. Griffith, refusant de le laisser partir sans se
+              battre, le défie en duel. La scène est tendue, avec les membres de
+              la Troupe du Faucon regardant anxieusement. Guts, armé de sa
+              massive Dragonslayer, affronte Griffith, qui utilise sa rapière.
+              Le combat est rapide et intense, chaque coup montrant la
+              différence entre la force brute de Guts et l'élégance stratégique
+              de Griffith. Contrairement à leur premier duel, Guts est
+              maintenant plus expérimenté et déterminé. Le tournant du duel
+              survient lorsque Guts, avec une puissance et une technique
+              accrues, parvient à briser la garde de Griffith et à le désarmer.
+              Utilisant toute sa force, il frappe avec sa Dragonslayer, brisant
+              la rapière de Griffith et le plaquant au sol, l'épée pointée vers
+              son cou.
+            </p>
+            <br />
+
+            <p class="description">
+              <strong>Conséquences du Duel : </strong>
+              Guts remporte le duel, prouvant qu'il est maintenant suffisamment
+              fort pour suivre son propre chemin. La défaite de Griffith est non
+              seulement physique, mais aussi symbolique, car elle marque la fin
+              de son contrôle sur Guts. Griffith est profondément affecté par
+              cette défaite, ce qui le conduit à des actions désespérées par la
+              suite, notamment sa relation avec la princesse Charlotte et son
+              emprisonnement. Le départ de Guts déclenche une série d'événements
+              qui culminent dans l'Éclipse, marquant un tournant majeur dans
+              l'histoire de "Berserk". La victoire de Guts dans ce duel renforce
+              son désir de liberté et de recherche de sa propre identité, tout
+              en soulignant la fragilité des ambitions de Griffith face à des
+              forces qu'il ne peut contrôler.
             </p>
             <br />
           </ul>
