--- a/templates/Demons/epeiste.html
+++ b/templates/Demons/epeiste.html
@@ -133,6 +133,161 @@
               en un serpent géant et possède une force surhumaine.
             </p>
             <br />
+
+            <!-- Zondark   -->
+            <li class="mangatitle">
+              <h2 style="text-align: center">Zondark</h2>
+            </li>
+
+            <div>
+              <figure>
+                <img
+                  id="proto"
+                  src="/img/Demons/Epeiste/Zondark.png"
+                  class="center hover"
+                  data-toggle="modal"
+                  data-target="#berserker-img"
+                />
+                <!-- Modal -->
+                <div
+                  class="modal fade"
+                  id="berserker-img"
+                  tabindex="-1"
+                  role="dialog"
+                  aria-labelledby="berserker-img"
+                  aria-hidden="true"
+                >
+                  <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button
+                          type="button"
+                          class="close"
+                          data-dismiss="modal"
+                          aria-label="Close"
+                        >
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+                      </div>
+                      <div class="modal-body">
+                        <img
+                          src="/img/Demons/Epeiste/Zondark.png"
+                          class="modal-image img-fluid"
+                        />
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Modal -->
+              </figure>
+            </div>
+            <p class="description">
+              <strong> Description :</strong> Zondrak est un mercenaire brutal
+              et imposant, employé par le Comte pour capturer et éliminer Guts.
+              Zondark est reconnu pour sa grande taille, sa musculature massive
+              et son attitude violente. Il porte une armure lourde et manie une
+              énorme hache de guerre.
+            </p>
+            <br />
+            <p class="description">
+              <strong> Affinités et Pouvoirs :</strong> Zondark est profondément
+              loyal envers le Comte, suivant ses ordres sans question et
+              nourrissant une haine intense pour Guts après avoir été vaincu par
+              lui. Cette animosité le pousse à pourchasser Guts avec une
+              détermination implacable. Doté d'une force physique
+              exceptionnelle, Zondark manie une énorme hache de guerre avec une
+              facilité déconcertante et possède une grande résistance et
+              durabilité grâce à sa constitution robuste et son armure lourde.
+              Après avoir été gravement blessé par Guts, Zondark subit une
+              transformation démoniaque sous l'influence du Comte, ce qui
+              amplifie sa force et sa résistance, le rendant encore plus
+              redoutable et terrifiant.
+            </p>
+            <br />
+
+            <!-- Le Comte -->
+            <li class="mangatitle">
+              <h2 style="text-align: center">Le Comte</h2>
+            </li>
+
+            <div>
+              <figure>
+                <img
+                  id="proto"
+                  src="/img/Demons/Epeiste/Comte.png"
+                  class="center hover"
+                  data-toggle="modal"
+                  data-target="#berserker-img"
+                />
+                <!-- Modal -->
+                <div
+                  class="modal fade"
+                  id="berserker-img"
+                  tabindex="-1"
+                  role="dialog"
+                  aria-labelledby="berserker-img"
+                  aria-hidden="true"
+                >
+                  <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button
+                          type="button"
+                          class="close"
+                          data-dismiss="modal"
+                          aria-label="Close"
+                        >
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+                      </div>
+                      <div class="modal-body">
+                        <img
+                          src="/img/Demons/Epeiste/Comte.png"
+                          class="modal-image img-fluid"
+                        />
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Modal -->
+              </figure>
+            </div>
+            <p class="description">
+              <strong> Description :</strong> Le Comte, également connu sous le
+              nom de Slugg, est un personnage imposant et terrifiant dans
+              "Berserk". En tant qu'humain, il apparaît comme un homme obèse et
+              autoritaire, portant des vêtements somptueux qui témoignent de son
+              statut de noble. Son visage est marqué par des traits sévères et
+              cruels, reflétant sa nature impitoyable. Il règne sur une région
+              de Midland avec une poigne de fer, utilisant la peur et la
+              brutalité pour maintenir son autorité.
+            </p>
+            <br />
+
+            <p class="description">
+              <strong> Affinités et Pouvoirs :</strong> Le Comte, aussi connu
+              sous le nom de Slugg, est un apôtre puissant et tyrannique qui
+              règne sur une région de Midland. En tant qu'apôtre, il est
+              profondément loyal aux God Hand, prêt à tout pour satisfaire leurs
+              désirs et maintenir son pouvoir. Sa transformation en apôtre
+              découle d'un pacte fait pour obtenir la vengeance contre les
+              hérétiques responsables de la mort de sa femme, ce qui alimente sa
+              cruauté et son fanatisme religieux.
+            </p>
+            <br />
+
+            <p class="description">
+              Doté de pouvoirs surhumains, le Comte peut se régénérer
+              rapidement, guérissant de blessures qui seraient mortelles pour un
+              humain normal. Sa force physique est immense, lui permettant de
+              déchiqueter ses ennemis avec facilité. En forme d'apôtre, il se
+              transforme en une créature hideuse et massive, capable d'avaler
+              ses adversaires et d'utiliser son corps visqueux pour immobiliser
+              et digérer ses victimes. Cette forme monstrueuse accentue sa
+              capacité à semer la terreur et à dominer ceux qui osent s'opposer
+              à lui.
+            </p>
+            <br />
           </ul>
         </div>
       </div>
