--- a/templates/header.html
+++ b/templates/header.html
@@ -56,7 +56,7 @@
               aria-haspopup="true"
               aria-expanded="false"
             >
-              Demons
+              Combats
             </a>
             <ul class="dropdown-menu" aria-labelledby="demonsDropdown">
               <li>
