--- a/templates/demons.html
+++ b/templates/demons.html
@@ -425,65 +425,6 @@
             </div>
             <br />
 
-            <!-- Vlad le Baron Serpent  -->
-            <li class="mangatitle">
-              <h2 style="text-align: center">Vlad le Baron Serpent</h2>
-            </li>
-
-            <div>
-              <figure>
-                <img
-                  id="proto"
-                  src="../img/Demons/Vlad.png"
-                  class="center hover"
-                  data-toggle="modal"
-                  data-target="#berserker-img"
-                />
-                <!-- Modal -->
-                <div
-                  class="modal fade"
-                  id="berserker-img"
-                  tabindex="-1"
-                  role="dialog"
-                  aria-labelledby="berserker-img"
-                  aria-hidden="true"
-                >
-                  <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <button
-                          type="button"
-                          class="close"
-                          data-dismiss="modal"
-                          aria-label="Close"
-                        >
-                          <span aria-hidden="true">&times;</span>
-                        </button>
-                      </div>
-                      <div class="modal-body">
-                        <img
-                          src="../img/Demons/Vlad.png"
-                          class="modal-image img-fluid"
-                        />
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <!-- Modal -->
-              </figure>
-            </div>
-            <p class="description">
-              <strong> Description :</strong>Un apôtre prenant la forme d'un
-              serpent géant, Vlad dirigeait une région avant d'être confronté à
-              Guts.
-            </p>
-            <br />
-            <p class="description">
-              <strong> Affinités et Pouvoirs :</strong> Vlad peut se transformer
-              en un serpent géant et possède une force surhumaine.
-            </p>
-            <br />
-
             <!-- le Baron Slugg  -->
             <li class="mangatitle">
               <h2 style="text-align: center">Le Baron Slugg</h2>
@@ -532,13 +473,37 @@
               </figure>
             </div>
             <p class="description">
-              <strong> Description :</strong>Un autre apôtre prenant la forme
-              d'une créature visqueuse et rampante. <br />
+              <strong> Description :</strong>Le Comte, également connu sous le
+              nom de Slugg, est un personnage imposant et terrifiant dans
+              "Berserk". En tant qu'humain, il apparaît comme un homme obèse et
+              autoritaire, portant des vêtements somptueux qui témoignent de son
+              statut de noble. Son visage est marqué par des traits sévères et
+              cruels, reflétant sa nature impitoyable. Il règne sur une région
+              de Midland avec une poigne de fer, utilisant la peur et la
+              brutalité pour maintenir son autorité.
+              <br />
             </p>
 
             <p class="description">
-              <strong> Affinités et Pouvoirs :</strong> Vlad peut se transformer
-              en un serpent géant et possède une force surhumaine.
+              <strong> Affinités et Pouvoirs :</strong> Le Comte, aussi connu
+              sous le nom de Slugg, est un apôtre puissant et tyrannique qui
+              règne sur une région de Midland. En tant qu'apôtre, il est
+              profondément loyal aux God Hand, prêt à tout pour satisfaire leurs
+              désirs et maintenir son pouvoir. Sa transformation en apôtre
+              découle d'un pacte fait pour obtenir la vengeance contre les
+              hérétiques responsables de la mort de sa femme, ce qui alimente sa
+              cruauté et son fanatisme religieux.
+            </p>
+            <p class="description">
+              Doté de pouvoirs surhumains, le Comte peut se régénérer
+              rapidement, guérissant de blessures qui seraient mortelles pour un
+              humain normal. Sa force physique est immense, lui permettant de
+              déchiqueter ses ennemis avec facilité. En forme d'apôtre, il se
+              transforme en une créature hideuse et massive, capable d'avaler
+              ses adversaires et d'utiliser son corps visqueux pour immobiliser
+              et digérer ses victimes. Cette forme monstrueuse accentue sa
+              capacité à semer la terreur et à dominer ceux qui osent s'opposer
+              à lui.
             </p>
             <br />
           </ul>
