+ combat age or

--- a/templates/Demons/Age_or.html
+++ b/templates/Demons/Age_or.html
@@ -429,6 +429,101 @@
               forces qu'il ne peut contrôler.
             </p>
             <br />
+
+            <!-- Wyald  -->
+            <li class="mangatitle">
+              <h2 style="text-align: center">Wyald</h2>
+            </li>
+
+            <div>
+              <figure>
+                <img
+                  id="proto"
+                  src="../img/Demons/Age_or/Wyald"
+                  class="center hover"
+                  data-toggle="modal"
+                  data-target="#berserker-img"
+                />
+                <!-- Modal -->
+                <div
+                  class="modal fade"
+                  id="berserker-img"
+                  tabindex="-1"
+                  role="dialog"
+                  aria-labelledby="berserker-img"
+                  aria-hidden="true"
+                >
+                  <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button
+                          type="button"
+                          class="close"
+                          data-dismiss="modal"
+                          aria-label="Close"
+                        >
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+                      </div>
+                      <div class="modal-body">
+                        <img
+                          src="../img/Demons/Age_or/Wyald.png"
+                          class="modal-image img-fluid"
+                        />
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Modal -->
+              </figure>
+            </div>
+            <p class="description">
+              <strong> Description :</strong>Wyald est le chef sadique des Black
+              Dog Knights, une unité de mercenaires connue pour sa cruauté et
+              son efficacité. Ce combat se déroule alors que la Troupe du Faucon
+              tente de sauver Griffith de sa captivité.
+            </p>
+            <br />
+            <p class="description">
+              <strong> Description du Duel:</strong>
+              Le combat commence lorsque Wyald et ses Black Dog Knights
+              attaquent la Troupe du Faucon, tentant de capturer Griffith. Guts
+              intervient pour protéger ses camarades et affronter Wyald. Au
+              début du combat, Guts se bat contre Wyald dans sa forme humaine,
+              mais il se rend vite compte que Wyald est bien plus fort que
+              n'importe quel humain normal. Wyald se transforme alors en sa
+              forme d'apôtre, révélant une créature monstrueuse, massive et
+              grotesque. Guts est confronté à un adversaire terrifiant, mais il
+              ne recule pas. Le combat est intense et brutal, avec Guts
+              utilisant toutes ses compétences et sa force pour tenter de
+              blesser Wyald. Malgré ses efforts, Guts est surclassé par la force
+              brute et les capacités régénératrices de Wyald. Cependant, sa
+              détermination et sa volonté de protéger ses amis le poussent à
+              continuer le combat, même lorsqu'il est gravement blessé. À un
+              moment critique, Wyald capture Griffith et menace de le tuer, ce
+              qui renforce encore plus la détermination de Guts. Le combat
+              atteint son apogée lorsque Wyald, en pleine transformation
+              démoniaque, est attaqué par Skull Knight, un mystérieux guerrier
+              qui apparaît pour aider Guts et la Troupe du Faucon. Skull Knight
+              porte un coup décisif à Wyald, permettant à Guts de reprendre
+              l'avantage.
+            </p>
+            <br />
+
+            <p class="description">
+              <strong>Conséquences du Duel : </strong>
+              Grâce à l'intervention de Skull Knight, Guts et la Troupe du
+              Faucon parviennent à repousser Wyald et ses Black Dog Knights.
+              Wyald, gravement blessé, tente une dernière attaque désespérée,
+              mais est finalement tué. Ce combat souligne la détermination de
+              Guts à protéger ses amis et à affronter des ennemis bien plus
+              puissants que lui. Il montre également l'existence de forces et de
+              personnages mystérieux comme Skull Knight, qui jouent un rôle
+              crucial dans la lutte contre les apôtres et les God Hand. La
+              défaite de Wyald permet à la Troupe du Faucon de continuer leur
+              mission de sauvetage de Griffith.
+            </p>
+            <br />
           </ul>
         </div>
       </div>
